# ondewo-sip-client-python

./: .flake8  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  Dockerfile.utils  Makefile  README.md  RELEASE.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sip_config.json
.github/workflows/: tests.yml
envs/: versions.env
examples/: environment.env  register_account_example.py
ondewo/sip/: sip_pb2.py  sip_pb2.pyi  sip_pb2_grpc.py
ondewo/sip/client/: async_services_interface.py  client.py  client_config.py  services_container.py  services_interface.py
ondewo/sip/client/services/: async_sip.py  sip.py
ondewo/sip/utils/: keycloak.py
tests/unit/client/: test_services_interface.py  test_sip_services.py
tests/unit/examples/: test_register_account_example.py
tests/unit/utils/: test_client_config.py  test_keycloak.py
